add second section

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="font-family:^Roboto^,sans-serif background-color:$bp margin:0 color:#fafafa">
     <div>
-        <div class="height:100svh display:flex flex-direction:column align-items:center justify-content:center background:radial-gradient(circle,_$bp_15%,_transparent_50%)">
+        <div class="height:100svh display:flex flex-direction:column align-items:center justify-content:center position:relative background:radial-gradient(circle,_$bp_15%,_transparent_50%)">
             <div class="centerdContainer position:relative width:35% min-width:350px max-width:575px">
                 <img src="../build/src/searxng.svg" class="width:100%" alt="Logo">
                 <div class="particles position:absolute top:calc(50%_-_1rem) left:calc(50%_-_1rem) z-index:-1">
@@ -24,8 +24,23 @@
                 <img src="../build/src/engine.svg" alt="Search Engine" class="width:100% margin:.5rem_0 margin-bottom:1.5rem">
             </div>
             <div class="display:flex sm:flex-direction:row flex-direction:column">
-                <a class="padding:.75rem_1.5rem background-color:$pc border:2px_solid_$pc border-radius:.5rem font-size:1.5rem hover:cursor:pointer transition:all_200ms hover:background-color:transparent hover:border-color:$sc active:transform:translateY(5%) text-decoration:none color:inherit margin-bottom:1rem sm:margin:0" href="https://moae.sbs">Try Now</a>
-                <a class="padding:.75rem_1.5rem background-color:#F6F8FC border:2px_solid_#F6F8FC border-radius:.5rem font-size:1.5rem hover:cursor:pointer transition:all_200ms hover:background-color:transparent active:transform:translateY(5%) text-decoration:none color:$bs hover:color:inherit sm:margin-left:1rem" href="https://daramet.com/MOA-Donate">Donate</a>
+                <a class="padding:.75rem_1.5rem background-color:$pc border:2px_solid_$pc border-radius:.5rem font-size:x-large hover:cursor:pointer transition:all_200ms hover:background-color:transparent hover:border-color:$sc active:transform:translateY(5%) text-decoration:none color:inherit margin-bottom:1rem sm:margin:0" href="https://moae.sbs">Try Now</a>
+                <a class="padding:.75rem_1.5rem background-color:#F6F8FC border:2px_solid_#F6F8FC border-radius:.5rem font-size:x-large hover:cursor:pointer transition:all_200ms hover:background-color:transparent active:transform:translateY(5%) text-decoration:none color:$bs hover:color:inherit sm:margin-left:1rem" href="https://daramet.com/MOA-Donate">Donate</a>
+            </div>
+            <div class="display:flex align-items:center opacity:.5 position:absolute bottom:1rem">
+                <img src="../build/src/arrow-down.svg" alt="arrow down">
+                <span class="margin-left:.2rem">Scroll</span>
+            </div>
+        </div>
+        <div class="padding:5rem_2rem display:flex align-items:center justify-content:space-between overflow:hidden maxw1020px:flex-wrap:wrap">
+            <div class="width:50vw min-width:450px maxw1020px:min-width:85% maxw1020px:margin-bottom:2.5rem padding:1.5rem_5rem maxw1020px:padding:0_1rem">
+                <h1 class="font-size:xxx-large">Metasearch Engine,<br> Respect Your <span class="color:$sc">Privacy</span></h1>
+                <p class="margin-bottom:2.5rem font-size:large text-align:justify line-height:2rem">Metasearch engines are always a safe solution for maintaining privacy and security of personal information due to receiving information from different search engines and preventing user information from reaching search engines.</p>
+                <p class="line-height:1.5rem"><span class="background-color:#865dff24 padding:.1rem_.5rem margin-right:.5rem">Simple and Useful UI:</span>Moa comes to your browser with a simple and pleasant user interface to give you a pleasant privacy experience.</p>
+                <p class="line-height:1.5rem"><span class="background-color:#865dff24 padding:.1rem_.5rem margin-right:.5rem">FOSS and Decentralized:</span>MOA is free software and anyone can create an instance of it on their server</p>
+            </div>
+            <div class="width:70vw min-width:650px maxw1020px:min-width:95vw">
+                <img src="../build/src/screenshots/Screenshot1.png" alt="Screenshot" class="transform:translateX(5%) width:100% border-radius:2rem box-shadow:#865dff24_-5px_-5px_10px_2px">
             </div>
         </div>
     </div>
