--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,28 @@
             <div class="width:50vw min-width:450px maxw1020px:min-width:85% maxw1020px:margin-bottom:2.5rem padding:1.5rem_5rem maxw1020px:padding:0_1rem">
                 <h1 class="font-size:xxx-large">Metasearch Engine,<br> Respect Your <span class="color:$sc">Privacy</span></h1>
                 <p class="margin-bottom:2.5rem font-size:large text-align:justify line-height:2rem">Metasearch engines are always a safe solution for maintaining privacy and security of personal information due to receiving information from different search engines and preventing user information from reaching search engines.</p>
-                <p class="line-height:1.5rem"><span class="background-color:#865dff24 padding:.1rem_.5rem margin-right:.5rem">Simple and Useful UI:</span>Moa comes to your browser with a simple and pleasant user interface to give you a pleasant privacy experience.</p>
-                <p class="line-height:1.5rem"><span class="background-color:#865dff24 padding:.1rem_.5rem margin-right:.5rem">FOSS and Decentralized:</span>MOA is free software and anyone can create an instance of it on their server</p>
+                <p class="line-height:1.5rem"><span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">Simple and Useful UI:</span>MOA comes to your browser with a simple and pleasant user interface to give you a pleasant privacy experience.</p>
+                <p class="line-height:1.5rem"><span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">FOSS and Decentralized:</span>MOA is free software and anyone can create an instance of it on their server</p>
             </div>
             <div class="width:70vw min-width:650px maxw1020px:min-width:95vw">
                 <img src="../build/src/screenshots/Screenshot1.png" alt="Screenshot" class="transform:translateX(5%) width:100% border-radius:2rem box-shadow:#865dff24_-5px_-5px_10px_2px">
+            </div>
+        </div>
+        <div class="display:flex align-items:center justify-content:space-evenly flex-wrap:wrap margin:4rem_1rem">
+            <div class="flex-basis:350px margin:1rem border:#b984ff4f_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
+                <img src="../build/src/gears.svg" alt="gears" class="padding:1rem_0_0">
+                <h2 class="margin:0">Tens of Engines</h2>
+                <p class="text-align:center">Tens of engines in your browser, in different languages and different categories; Just choose</p>
+            </div>
+            <div class="flex-basis:350px margin:1rem border:#865dff57_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
+                <img src="../build/src/user-secret.svg" alt="user-secret" class="padding:1rem_0_0">
+                <h2 class="margin:0">Your Data is Safe</h2>
+                <p class="text-align:center">With internal addressing you are no longer traceable via the address bar</p>
+            </div>
+            <div class="flex-basis:350px margin:1rem border:#b984ff4f_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
+                <img src="../build/src/puzzle-piece.svg" alt="puzzle-piece" class="padding:1rem_0_0">
+                <h2 class="margin:0">Plugins</h2>
+                <p class="text-align:center">There are plugins for you to use, you can even be their creator</p>
             </div>
         </div>
     </div>
