add 3 part and complate ( for now )

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,25 @@
                 <p class="text-align:center">There are plugins for you to use, you can even be their creator</p>
             </div>
         </div>
+        <div class="display:flex align-items:center justify-content:space-evenly padding:5rem_0 flex-wrap:wrap background-color:$bs">
+            <div class="flex-basis:675px display:flex align-items:center flex-direction:column">
+                <img src="../build/src/screenshots/Screenshot2.png" class="max-width:95% border-radius:1rem">
+            </div>
+            <div class="flex-basis:675px padding:1.5rem">
+                <h1>Fully Supported <span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">Perso-Arabic</span>Script</h1>
+                <p>Get complete and comprehensive support for Farsi(Persian), Arabic, Urdu and etc</p>
+            </div>
+        </div>
+        <div class="display:flex align-items:center justify-content:space-evenly padding:2rem_0 maxw1020px:flex-wrap:wrap">
+            <div class="padding:.75rem_1.5rem">
+                <h3>Contribute</h3>
+                <p>This is your search engine too, contribute and improve it</p>
+            </div>
+            <a href="https://github.com/moa-engine/MOA" class="padding:.75rem_1.5rem hover:background-color:#F6F8FC border:2px_solid_#F6F8FC border-radius:.5rem font-size:large hover:cursor:pointer transition:all_200ms active:transform:translateY(5%) text-decoration:none color:#fafafa hover:color:$bp margin:1rem">Source on Github</a>
+        </div>
     </div>
+    <footer class="background-color:#0e0f10 text-align:center padding:1rem_3rem">
+        All rights reserved for MOA, inspired by <a href="https://www.routemamba.com/" class="text-decoration:none">Routemamba</a>
+    </footer>
 </body>
 </html>
