--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,28 @@
     <meta name="description" content="A search engine, respect your privacy">
     <meta name="theme-color" content="#865DFF"/>
     <meta name="googlebot" content="notranslate">
-    <link rel="shortcut icon" href="../build/src/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../docs/src/favicon.svg" type="image/x-icon">
 </head>
 <body class="font-family:^Roboto^,sans-serif background-color:$bp margin:0 color:#fafafa">
     <div>
-        <div class="height:100svh display:flex flex-direction:column align-items:center justify-content:center position:relative background:radial-gradient(circle,_$bp_15%,_transparent_50%)">
+        <img src="../docs/src/wwwhirl.svg" class="position:absolute filter:blur(25px)">
+        <div class="height:100svh display:flex flex-direction:column align-items:center justify-content:center position:relative background:radial-gradient(circle,_$bp_15%,_transparent_35%)">
             <div class="centerdContainer position:relative width:35% min-width:350px max-width:575px">
-                <img src="../build/src/searxng.svg" class="width:100%" alt="Logo">
+                <img src="../docs/src/searxng.svg" class="width:100%" alt="Logo">
                 <div class="particles position:absolute top:calc(50%_-_1rem) left:calc(50%_-_1rem) z-index:-1">
-                    <img src="../build/src/particles/search.svg" alt="paticle" class="position:absolute animation:aGetout_5s_both_.5s,19s_aFly_1.5s_infinite_ease-in-out minw1500px:left:200px lg:left:100px left:50px maxw568px:display:none">
-                    <img src="../build/src/particles/file-text.svg" alt="paticle" class="position:absolute animation:bGetout_5s_both_1s,18.5s_bFly_2s_infinite_ease-in-out minw1500px:right:200px lg:right:100px right:50px maxw568px:display:none">
-                    <img src="../build/src/particles/image.svg" alt="paticle" class="position:absolute animation:dGetout_5s_both_1.25s,15s_dFly_2.25s_infinite_ease-in-out minw1500px:left:200px lg:left:100px left:50px maxw568px:display:none">
-                    <img src="../build/src/particles/film.svg" alt="paticle" class="position:absolute animation:cGetout_5s_both_.75s,20s_cFly_1.75s_infinite_ease-in-out minw1500px:right:200px lg:right:100px right:50px maxw568px:display:none">
+                    <img src="../docs/src/particles/search.svg" alt="paticle" class="position:absolute animation:aGetout_5s_both_.5s,19s_aFly_1.5s_infinite_ease-in-out minw1500px:left:200px lg:left:100px left:50px maxw568px:display:none">
+                    <img src="../docs/src/particles/file-text.svg" alt="paticle" class="position:absolute animation:bGetout_5s_both_1s,18.5s_bFly_2s_infinite_ease-in-out minw1500px:right:200px lg:right:100px right:50px maxw568px:display:none">
+                    <img src="../docs/src/particles/image.svg" alt="paticle" class="position:absolute animation:dGetout_5s_both_1.25s,15s_dFly_2.25s_infinite_ease-in-out minw1500px:left:200px lg:left:100px left:50px maxw568px:display:none">
+                    <img src="../docs/src/particles/film.svg" alt="paticle" class="position:absolute animation:cGetout_5s_both_.75s,20s_cFly_1.75s_infinite_ease-in-out minw1500px:right:200px lg:right:100px right:50px maxw568px:display:none">
                 </div>
-                <img src="../build/src/engine.svg" alt="Search Engine" class="width:100% margin:.5rem_0 margin-bottom:1.5rem">
+                <img src="../docs/src/engine.svg" alt="Search Engine" class="width:100% margin:.5rem_0 margin-bottom:1.5rem">
             </div>
             <div class="display:flex sm:flex-direction:row flex-direction:column">
                 <a class="padding:.75rem_1.5rem background-color:$pc border:2px_solid_$pc border-radius:.5rem font-size:x-large hover:cursor:pointer transition:all_200ms hover:background-color:transparent hover:border-color:$sc active:transform:translateY(5%) text-decoration:none color:inherit margin-bottom:1rem sm:margin:0" href="https://moae.sbs">Try Now</a>
                 <a class="padding:.75rem_1.5rem background-color:#F6F8FC border:2px_solid_#F6F8FC border-radius:.5rem font-size:x-large hover:cursor:pointer transition:all_200ms hover:background-color:transparent active:transform:translateY(5%) text-decoration:none color:$bs hover:color:inherit sm:margin-left:1rem" href="https://daramet.com/MOA-Donate">Donate</a>
             </div>
             <div class="display:flex align-items:center opacity:.5 position:absolute bottom:1rem">
-                <img src="../build/src/arrow-down.svg" alt="arrow down">
+                <img src="../docs/src/arrow-down.svg" alt="arrow down">
                 <span class="margin-left:.2rem">Scroll</span>
             </div>
         </div>
@@ -40,29 +41,29 @@
                 <p class="line-height:1.5rem"><span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">FOSS and Decentralized:</span>MOA is free software and anyone can create an instance of it on their server</p>
             </div>
             <div class="width:70vw min-width:650px maxw1020px:min-width:95vw">
-                <img src="../build/src/screenshots/Screenshot1.png" alt="Screenshot" class="transform:translateX(5%) width:100% border-radius:2rem box-shadow:#865dff24_-5px_-5px_10px_2px">
+                <img src="../docs/src/screenshots/Screenshot1.png" alt="Screenshot" class="transform:translateX(5%) width:100% border-radius:2rem box-shadow:#865dff24_-5px_-5px_10px_2px">
             </div>
         </div>
         <div class="display:flex align-items:center justify-content:space-evenly flex-wrap:wrap margin:4rem_1rem">
             <div class="flex-basis:350px margin:1rem border:#b984ff4f_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
-                <img src="../build/src/gears.svg" alt="gears" class="padding:1rem_0_0">
+                <img src="../docs/src/gears.svg" alt="gears" class="padding:1rem_0_0">
                 <h2 class="margin:0">Tens of Engines</h2>
                 <p class="text-align:center">Tens of engines in your browser, in different languages and different categories; Just choose</p>
             </div>
             <div class="flex-basis:350px margin:1rem border:#865dff57_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
-                <img src="../build/src/user-secret.svg" alt="user-secret" class="padding:1rem_0_0">
+                <img src="../docs/src/user-secret.svg" alt="user-secret" class="padding:1rem_0_0">
                 <h2 class="margin:0">Your Data is Safe</h2>
                 <p class="text-align:center">With internal addressing you are no longer traceable via the address bar</p>
             </div>
             <div class="flex-basis:350px margin:1rem border:#b984ff4f_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
-                <img src="../build/src/puzzle-piece.svg" alt="puzzle-piece" class="padding:1rem_0_0">
+                <img src="../docs/src/puzzle-piece.svg" alt="puzzle-piece" class="padding:1rem_0_0">
                 <h2 class="margin:0">Plugins</h2>
                 <p class="text-align:center">There are plugins for you to use, you can even be their creator</p>
             </div>
         </div>
         <div class="display:flex align-items:center justify-content:space-evenly padding:5rem_0 flex-wrap:wrap background-color:$bs">
             <div class="flex-basis:675px display:flex align-items:center flex-direction:column">
-                <img src="../build/src/screenshots/Screenshot2.png" class="max-width:95% border-radius:1rem">
+                <img src="../docs/src/screenshots/Screenshot2.png" class="max-width:95% border-radius:1rem">
             </div>
             <div class="flex-basis:675px padding:1.5rem">
                 <h1>Fully Supported <span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">Perso-Arabic</span>Script</h1>
