--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../docs/src/favicon.svg" type="image/x-icon">
 </head>
 <body class="font-family:^Roboto^,sans-serif background-color:$bp margin:0 color:#fafafa">
-    <div>
+    <div class="overflow:hidden position:relative">
         <img src="../docs/src/wwwhirl.svg" class="position:absolute filter:blur(25px)">
         <div class="height:100svh display:flex flex-direction:column align-items:center justify-content:center position:relative background:radial-gradient(circle,_$bp_15%,_transparent_35%)">
             <div class="centerdContainer position:relative width:35% min-width:350px max-width:575px">
@@ -36,9 +36,9 @@
         <div class="padding:5rem_2rem display:flex align-items:center justify-content:space-between overflow:hidden maxw1020px:flex-wrap:wrap">
             <div class="width:50vw min-width:450px maxw1020px:min-width:85% maxw1020px:margin-bottom:2.5rem padding:1.5rem_5rem maxw1020px:padding:0_1rem">
                 <h1 class="font-size:xxx-large">Metasearch Engine,<br> Respect Your <span class="color:$sc">Privacy</span></h1>
-                <p class="margin-bottom:2.5rem font-size:large text-align:justify line-height:2rem">Metasearch engines are always a safe solution for maintaining privacy and security of personal information due to receiving information from different search engines and preventing user information from reaching search engines.</p>
-                <p class="line-height:1.5rem"><span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">Simple and Useful UI:</span>MOA comes to your browser with a simple and pleasant user interface to give you a pleasant privacy experience.</p>
-                <p class="line-height:1.5rem"><span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">FOSS and Decentralized:</span>MOA is free software and anyone can create an instance of it on their server</p>
+                <p class="margin-bottom:2.5rem font-size:large text-align:justify line-height:2rem">MOA is a free and open-source meta-search engine. This application is designed with the aim of simplicity and usability for the general public, providing good and usable results while ensuring privacy, transparency, and freedom on the internet.</p>
+                <p class="line-height:1.5rem"><span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">Privacy and Security:</span>MOA prioritizes user privacy and does not collect any personal data from users. Your activities will not be tracked or stored, ensuring complete anonymity and security.</p>
+                <p class="line-height:1.5rem"><span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">Decentralized:</span>Anyone can serve MOA on their server for their family, all people, or even just for themselves. You can even simply run it on your computer.</p>
             </div>
             <div class="width:70vw min-width:650px maxw1020px:min-width:95vw">
                 <img src="../docs/src/screenshots/Screenshot1.png" alt="Screenshot" class="transform:translateX(5%) width:100% border-radius:2rem box-shadow:#865dff24_-5px_-5px_10px_2px">
@@ -47,18 +47,18 @@
         <div class="display:flex align-items:center justify-content:space-evenly flex-wrap:wrap margin:4rem_1rem">
             <div class="flex-basis:350px margin:1rem border:#b984ff4f_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
                 <img src="../docs/src/gears.svg" alt="gears" class="padding:1rem_0_0">
-                <h2 class="margin:0">Tens of Engines</h2>
-                <p class="text-align:center">Tens of engines in your browser, in different languages and different categories; Just choose</p>
+                <h2 class="margin:0">Ease of Use for All</h2>
+                <p class="text-align:center">MOA's clean and intuitive UI prioritizes user privacy and ease of use, ensuring a safe and enjoyable browsing experience.</p>
             </div>
             <div class="flex-basis:350px margin:1rem border:#865dff57_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
-                <img src="../docs/src/user-secret.svg" alt="user-secret" class="padding:1rem_0_0">
-                <h2 class="margin:0">Your Data is Safe</h2>
-                <p class="text-align:center">With internal addressing you are no longer traceable via the address bar</p>
+                <img src="../docs/src/eye.svg" alt="user-secret" class="padding:1rem_0_0">
+                <h2 class="margin:0">Transparent</h2>
+                <p class="text-align:center">The development of MOA is transparent on GitHub and we will document its development process as much as possible.</p>
             </div>
             <div class="flex-basis:350px margin:1rem border:#b984ff4f_1px_solid background-color:$bs padding:1rem_2.5rem_2rem border-radius:1rem display:flex align-items:center flex-direction:column">
                 <img src="../docs/src/puzzle-piece.svg" alt="puzzle-piece" class="padding:1rem_0_0">
-                <h2 class="margin:0">Plugins</h2>
-                <p class="text-align:center">There are plugins for you to use, you can even be their creator</p>
+                <h2 class="margin:0">Plugins and Themes</h2>
+                <p class="text-align:center">MOA supports various plugins. Anyone can write a new plugin, theme, or even a better search engine according to their needs.</p>
             </div>
         </div>
         <div class="display:flex align-items:center justify-content:space-evenly padding:5rem_0 flex-wrap:wrap background-color:$bs">
