--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
             <div class="flex-basis:675px display:flex align-items:center flex-direction:column">
                 <img src="../docs/src/screenshots/Screenshot2.png" class="max-width:95% border-radius:1rem">
             </div>
-            <div class="flex-basis:675px padding:1.5rem">
+            <div class="flex-basis:675px padding:1.5rem text-align:center">
                 <h1>Fully Supported <span class="background-color:#865dff2e padding:.1rem_.5rem margin-right:.5rem">Perso-Arabic</span>Script</h1>
                 <p>Get complete and comprehensive support for Farsi(Persian), Arabic, Urdu and etc</p>
             </div>
